# digitalSnow

./: README.md
MLSimple/: CMakeLists.txt  comparator.cpp  extractor.cpp  generator.cpp  testML.cpp
deformations/: .gitignore  3dVolProjector.cpp  3dVolViewer.cpp  BinaryPredicates.h  CMakeLists.txt  CPointFunctorAdapter.h  DifferentialOperators.h  DifferentialOperators.ih  ExactDiffusionEvolver.h  ExactDiffusionEvolver.ih  ExactReactionEvolver.h  ExactReactionEvolver.ih  ExplicitEvolver.h  ExplicitEvolver.ih  ExplicitReactionEvolver.h  ExplicitReactionEvolver.ih  FFT.h  FFT.ih  FMM.h  FMM.ih  FMMPointFunctors.h  FMMPointFunctors.ih  FrontierEvolver.h  FrontierEvolver.ih  FrontierEvolver2.h  FrontierEvolver2.ih  FrontierEvolverHelpers.h  GrayscaleMapCast.h  IFFT.h  IFFT.ih  LieSplittingEvolver.h  LieSplittingEvolver.ih  LocalBalloonForce.h  LocalBalloonForce.ih  LocalMCM.h  LocalMCM.ih  MultiPhaseField.h  MultiPhaseField.ih  PartitionEvolver.h  PartitionEvolver.ih  (+22 more)
deformations/images/: annulus.pgm  curve.pgm  disk.pgm  flower.pgm  flowerInv.pgm  glasses.pgm  glasses2.pgm  glasses3.pgm  glasses3bis.pgm  lenna.pgm  partition.pgm  partition32.vol  square.pgm
radiativeTransfer/: README
radiativeTransfer/customPhotonTracing/: README
radiativeTransfer/customPhotonTracing/pbrt-v2_dupli/src/: Makefile  fichierModif.txt  fichierModif.txt~
radiativeTransfer/customPhotonTracing/pbrt-v2_dupli/src/core/: api.cpp  api.cpp~  api.h  diffgeom.cpp  diffgeom.cpp~  pbrt.h  pbrt.h~  pbrtlex.cpp  pbrtparse.cpp  pbrtparse.hpp  pbrtparse.output  primitive.cpp  primitive.cpp~
radiativeTransfer/customPhotonTracing/pbrt-v2_dupli/src/integrators/: emission.cpp~  photonmap.cpp  photonmap.cpp~  photonmap.h  photonmap.h~
radiativeTransfer/customPhotonTracing/pbrt-v2_dupli/src/lights/: distant.cpp  distant.cpp~
radiativeTransfer/customPhotonTracing/pbrt-v2_dupli/src/main/: pbrt.cpp  pbrt.cpp~  pbrt_orig.cpp~
radiativeTransfer/customPhotonTracing/pbrt-v2_dupli/src/renderers/: samplerrenderer.cpp  samplerrenderer.cpp~  samplerrenderer_exo.cpp~
radiativeTransfer/customPhotonTracing/pbrt-v2_dupli/src/shapes/: trianglemesh.cpp  trianglemesh.cpp~
radiativeTransfer/tools/: CMakeLists.txt  Noff2Pbrt.cpp  README  resizeDCRF.cpp  volSubSample.cpp
