PROJECT(MLSimpleProject)

#Required in DGtal
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(DGtal REQUIRED)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})

ADD_EXECUTABLE(testML testML)
TARGET_LINK_LIBRARIES(testML ${DGTAL_LIBRARIES})
ADD_EXECUTABLE(generator generator)
TARGET_LINK_LIBRARIES(generator ${DGTAL_LIBRARIES})
ADD_EXECUTABLE(comparator comparator)
TARGET_LINK_LIBRARIES(comparator ${DGTAL_LIBRARIES})
ADD_EXECUTABLE(extractor extractor)
TARGET_LINK_LIBRARIES(extractor ${DGTAL_LIBRARIES})
